<resources>
    <string name="name">스리네챗</string>
    
    <string name="empty"></string>
    <string name="test">Test Message</string>
    
    <string name="chat_scroll_image">Chat Scroll Image</string>
    <string name="chat_sound_image">Chat Sound Image</string>
    <string name="chat_color_image">Chat Sound Image</string>
    <string name="chat_message_hint">메시지를 입력해 주세요.</string>
    <string name="chat_send_button">글쓰기</string>
    <string name="chat_color_button">글자색</string>
    <string name="chat_name_button">대화명</string>
    
    <string-array name="list_max">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>999</item>
    </string-array>
</resources>