<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3f3f3f"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
<!--         <ToggleButton android:id="@+id/toggle_chat_scroll" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:textOn="@string/empty" -->
<!--             android:textOff="@string/empty" -->
<!--             android:button="@drawable/toggle_chat_scroll" -->
<!--             android:checked="true" -->
<!--         /> -->
<!--         <ToggleButton android:id="@+id/toggle_chat_sound" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:textOn="@string/empty" -->
<!--             android:textOff="@string/empty" -->
<!--             android:button="@drawable/toggle_chat_sound" -->
<!--             android:checked="true" -->
<!--         /> -->
        <ImageButton android:id="@+id/toggle_chat_scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/scroll_on"
            android:contentDescription="@string/chat_scroll_image"
        />
        <ImageButton android:id="@+id/toggle_chat_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sound_on"
            android:contentDescription="@string/chat_sound_image"
        />
        <Spinner android:id="@+id/select_chat_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
    </LinearLayout>
    
    <ListView android:id="@+id/list_chat_log"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        
    </ListView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView android:id="@+id/image_chat_color"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/chat_color_image"
        />
        <EditText android:id="@+id/input_chat_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:hint="@string/chat_message_hint"
        />
        <Button android:id="@+id/button_chat_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chat_send_button"
            android:textColor="#ffffff"
        />
    </LinearLayout>
</LinearLayout>